--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -545,9 +545,10 @@ ul { list-style: url("../img/curls-list-2.png"); padding: 0 0 0 10px; }
   .site-header #logo #menuswitch.on:before { top: 15%; -webkit-transform: rotate(180deg); -moz-transform: rotate(180deg); -ms-transform: rotate(180deg); -o-transform: rotate(180deg); transform: rotate(180deg); } }
 @media screen and (max-width: 600px) { .site-header #logo img { width: 240px; } }
 
-/** Side menu
+/** Side menu on chapter pages
 */
 #sidemenu .title { width: 240px; margin: 0 10px 10px 10px; }
+#sidemenu .title a:hover { text-decoraton: none; }
 #sidemenu .index { width: 240px; margin: 20px 0 20px 10px; padding: 20px 5px; border: 2px solid #cd1619; text-align: center; }
 #sidemenu .index a:hover { text-decoration: none; }
 #sidemenu .index h5 { color: #cd1619; margin: 0; font-size: 27px; }
