--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -821,11 +821,77 @@
     }
 
 }
+    .sidecurls{
+       width: 80px;
+       margin: 50px auto;
 
+        @include media-query($on-laptop) {
+
+            display: none;
+
+        }
+    }
+
+    img.first{
+        float: right;
+         -moz-transform: scalX(-1);
+        -o-transform: scaleX(-1);
+        -webkit-transform: scaleX(-1);
+        transform: scaleX(-1);
+        filter: FlipH;
+        -ms-filter: "FlipH";
+    }
+
+    .second{
+        float: left;
+    }
+
+    .introduction{
+
+        padding: 5px 10px 30px 10px;
+        margin: 0 auto;
+        width: 80%;
+        img{
+            padding: 10px 0;
+            width: 100%;
+            margin: 0 auto;
+        }
+
+        a{
+
+
+            h6{   
+                text-transform: uppercase;
+                color: $black-color;
+                width: 100px;
+                font-size: 20px;
+                float: left;
+                padding: 0 25px 0 20px;
+
+                 &:hover{
+                    color: $red-color;
+                    text-decoration: none;
+                }
+
+            }
+
+
+            h6.download{
+                color: $red-color;
+
+                &:hover{
+                    color: $black-color;
+                }
+            }
+
+
+        }
+
+    }
 
     .grid-item{
-        float: left;
         width: 30%;
+        float: left;
         height: 450px; 
         padding: 5px 10px 30px 10px;
         margin: 0 10px;
@@ -868,33 +934,48 @@
 }
 
     @include media-query($on-laptop) {
-        .grid-item{ 
+
+        .grid-item{
             max-height: 400px;
-        
             img{
                 max-height: 360px;
             }
+
+        }
+        .grid-item, .introduction{ 
+        
+
             a{
                 h6{
                     font-size: 18px;
+                    padding: 0 25px 0 0;
+
                 }
             }
         }
+
+
     }
 
     @include media-query-landscape($on-laptop){
-        .grid-item{ 
-        
-            max-height: 320px;
 
+        .grid-item{
+            max-height: 320px;
             img{
                 max-height: 300px;
             }
+
+        }
+
+        .grid-item, .introduction{ 
+    
 
             a{
                 h6{
                     font-size: 12px;
                     width: 40px;
+                    padding: 0 25px 0 0;
+
                 }
             }
         }
@@ -902,15 +983,22 @@
     }
 
     @include media-query-portrait($on-palm){
-        .grid-item{ 
-            
+
+        .grid-item{
             max-height: 200px;
+
+        }
+
+        .grid-item, .introduction{ 
+            
 
 
             a{
                 h6{
                     font-size: 12px;
                     width: 40px;
+                    padding: 0 25px 0 0;
+
                 }
             }
         }
