--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -547,14 +547,15 @@ ul { list-style: url("../img/curls-list-2.png"); padding: 0 0 0 10px; }
 
 /** Side menu on chapter pages
 */
-#sidemenu .title { width: 240px; margin: 0 10px 10px 10px; }
+#sidemenu .title { width: 240px; display: block; margin: 0 10px 10px 10px; }
 #sidemenu .title a:hover { text-decoraton: none; }
-#sidemenu .index { width: 240px; margin: 20px 0 20px 10px; padding: 20px 5px; border: 2px solid #cd1619; text-align: center; }
+#sidemenu .index { width: 240px; display: block; margin: 20px 0 20px 10px; padding: 20px 5px; border: 2px solid #cd1619; text-align: center; }
 #sidemenu .index a:hover { text-decoration: none; }
 #sidemenu .index h5 { color: #cd1619; margin: 0; font-size: 27px; }
-#sidemenu .download { width: 240px; margin: 20px 0 20px 10px; padding: 10px 5px; border: 2px solid #cd1619; text-align: center; }
+#sidemenu .download { width: 240px; margin: 20px 0 20px 10px; padding: 10px 5px; display: block; border: 2px solid #cd1619; text-align: center; }
 #sidemenu .download h6 { color: #cd1619; text-transform: uppercase; margin: 0; font-size: 20px; letter-spacing: 0.03em; }
 #sidemenu .download a:hover { text-decoration: none; }
+#sidemenu .dontshow { display: none; -webkit-transition: display 0.5s ease; -moz-transition: display 0.5s ease; -ms-transition: display 0.5s ease; -o-transition: display 0.5s ease; transition: display 0.5s ease; }
 #sidemenu .contentnav { float: left; max-width: 60%; }
 #sidemenu .contentnav ul { padding: 0 0 0 10px; float: left; margin: 40px 0 0 0; list-style: none; }
 #sidemenu .contentnav ul li { list-style-type: none; padding: 5px 0 5px 0; font-size: 22px; line-height: 1.2em; }
@@ -677,7 +678,7 @@ img.first { float: right; -moz-transform: scalX(-1); -o-transform: scaleX(-1); -
 
 .second { float: left; }
 
-.introduction { padding: 5px 10px 30px 10px; margin: 0 auto; width: 80%; }
+.introduction { padding: 5px 10px 50px 10px; margin: 0 auto; width: 80%; }
 .introduction img { padding: 10px 0; width: 100%; margin: 0 auto; }
 .introduction a h6 { text-transform: uppercase; color: #1B1E1F; width: 100px; font-size: 20px; float: left; padding: 0 25px 0 20px; }
 .introduction a h6:hover { color: #cd1619; text-decoration: none; }
